[package]
name = "mongo"
version = "0.1.0"
authors = ["haghir <47360153+haghir@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]

[dependencies.tokio]
version = "0.3.3"
features = ["full"]
