[package]
name = "mysql-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.24.0", features = ["full"] }
mysql_async = "0.31.2"
sha2 = "0.10.6"
hex = "0.4.3"
time = "0.3.17"
