[package]
name = "ajax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
tera = "1.15.0"
tokio = {version = "1.17.0", features = ["full"]}
log = "0.4.16"
env_logger = "0.9.0"
