[package]
name = "actix-web-json"
version = "0.1.0"
authors = ["haghir <47360153+haghir@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
actix-web = "4"
serde = {version = "1", features = ["derive"]}
tera = "1"
