[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
tokio = "1.21.2"
actix-web = "4.2.1"
actix-multipart = "0.4.0"
futures-util = "0.3.24"
tera = "1.17.1"
sha2 = "0.10.6"
hex = "0.4.3"
