[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"
wasm-logger = "0.2"
serde = { version = "1", features = ["derive"] }
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
