[package]
name = "session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
actix-web = "4.2.1"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-redis = "0.12.0"
serde = { version = "1.0.147", features = ["derive"] }
tera = "1.17.1"
